--- a/MedicalServicesCentralisationSystem/src/userInterface/CustomerSupport/CustomerSupportMemberWorkArea/CustomerSupportMemberWorkAreaJPanel.form
+++ b/MedicalServicesCentralisationSystem/src/userInterface/CustomerSupport/CustomerSupportMemberWorkArea/CustomerSupportMemberWorkAreaJPanel.form
@@ -108,8 +108,11 @@
                                   <Component id="jButtonUpdate" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <Component id="jScrollPane1" alignment="0" min="-2" pref="747" max="-2" attributes="0"/>
                       </Group>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" min="-2" pref="1007" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="238" max="-2" attributes="0"/>
@@ -245,18 +248,36 @@
         <Component class="javax.swing.JTable" name="jTableRequests">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="7" rowCount="4">
+              <Table columnCount="10" rowCount="4">
                 <Column editable="false" title="CaseId" type="java.lang.Object"/>
                 <Column editable="false" title="Customer Name" type="java.lang.Object"/>
                 <Column editable="false" title="CustomerPhone" type="java.lang.Object"/>
                 <Column editable="false" title="CustomerEmail" type="java.lang.Object"/>
-                <Column editable="false" title="CaseDescription" type="java.lang.Object"/>
                 <Column editable="false" title="Hospital ID" type="java.lang.Object"/>
+                <Column editable="false" title="CustomerPincode" type="java.lang.Object"/>
+                <Column editable="true" title="Request Date" type="java.lang.Object"/>
+                <Column editable="false" title="RequestCategory" type="java.lang.Object"/>
+                <Column editable="false" title="CaseDescription" type="java.lang.Object"/>
                 <Column editable="false" title="Timestamp" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
